Moved Navbar code to component ->navbar changes on log in -> fixed sticky navbar going behind cards issue ->added background color to learning plan

--- a/src/app/learning-plan/learning-plan.component.css
+++ b/src/app/learning-plan/learning-plan.component.css
@@ -2,6 +2,7 @@ mat-card{
     width:300px;
     margin: 10px;
     margin-left:0;
+    background-color: antiquewhite;
 }
 .votes{
     display: flex;
